cmake_minimum_required(VERSION 3.26)

project(yue)

include_directories(src/lua-5.4.4)

add_executable(yue
    src/main.cpp
    src/lua-5.4.4/lapi.c
    src/lua-5.4.4/lapi.h
    src/lua-5.4.4/lauxlib.c
    src/lua-5.4.4/lauxlib.h
    src/lua-5.4.4/lbaselib.c
    src/lua-5.4.4/lcode.c
    src/lua-5.4.4/lcode.h
    src/lua-5.4.4/lcorolib.c
    src/lua-5.4.4/lctype.c
    src/lua-5.4.4/lctype.h
    src/lua-5.4.4/ldblib.c
    src/lua-5.4.4/ldebug.c
    src/lua-5.4.4/ldebug.h
    src/lua-5.4.4/ldo.c
    src/lua-5.4.4/ldo.h
    src/lua-5.4.4/ldump.c
    src/lua-5.4.4/lfunc.c
    src/lua-5.4.4/lfunc.h
    src/lua-5.4.4/lgc.c
    src/lua-5.4.4/lgc.h
    src/lua-5.4.4/linit.c
    src/lua-5.4.4/liolib.c
    src/lua-5.4.4/ljumptab.h
    src/lua-5.4.4/llex.c
    src/lua-5.4.4/llex.h
    src/lua-5.4.4/llimits.h
    src/lua-5.4.4/lmathlib.c
    src/lua-5.4.4/lmem.c
    src/lua-5.4.4/lmem.h
    src/lua-5.4.4/loadlib.c
    src/lua-5.4.4/lobject.c
    src/lua-5.4.4/lobject.h
    src/lua-5.4.4/lopcodes.c
    src/lua-5.4.4/lopcodes.h
    src/lua-5.4.4/lopnames.h
    src/lua-5.4.4/loslib.c
    src/lua-5.4.4/lparser.c
    src/lua-5.4.4/lparser.h
    src/lua-5.4.4/lprefix.h
    src/lua-5.4.4/lstate.c
    src/lua-5.4.4/lstate.h
    src/lua-5.4.4/lstring.c
    src/lua-5.4.4/lstring.h
    src/lua-5.4.4/lstrlib.c
    src/lua-5.4.4/ltable.c
    src/lua-5.4.4/ltable.h
    src/lua-5.4.4/ltablib.c
    src/lua-5.4.4/ltm.c
    src/lua-5.4.4/ltm.h
    #src/lua-5.4.4/lua.c
    src/lua-5.4.4/lua.h
    src/lua-5.4.4/lua.hpp
    #src/lua-5.4.4/luac.c
    src/lua-5.4.4/luaconf.h
    src/lua-5.4.4/lualib.h
    src/lua-5.4.4/lundump.c
    src/lua-5.4.4/lundump.h
    src/lua-5.4.4/lutf8lib.c
    src/lua-5.4.4/lvm.c
    src/lua-5.4.4/lvm.h
    src/lua-5.4.4/lzio.c
    src/lua-5.4.4/lzio.h
)